--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
 	"name": "mock_live_game_api",
 	"scripts": {
 		"compile": "tsc -p .",
-		"start": "node dist/index.js"
+		"start": "node dist/index.js",
+		"compile and start" : "tsc -p . && node dist/index.js"
 	},
 	"author": "Querijn Heijmans <querijn@irule.at>",
 	"license": "MIT",
 	"dependencies": {
 		"@types/node-fetch": "^2.5.7",
 		"express": "^4.17.1",
-		"node-fetch": "^3.1.1",
+		"node-fetch": "^2.6.1",
 		"typescript": "^3.8.3"
 	},
 	"version": "1.0.0",
